# Nodus

./: .gitignore  .nodusgate-allow  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_2.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  language.py  llms-full.txt  llms.txt  nodus.bat  nodus.py  package_manager.py  pyproject.toml  requirements.txt  sitecustomize.py  task_graph.py
.claude/commands/: close-cycle.md  file-bug.md  milestone-transition.md  nodus-a2a-validators.md  nodus-async-module-yield.md  nodus-companion-security.md  nodus-dap-evaluate.md  nodus-ecosystem-ci.md  nodus-extension-phase.md  nodus-goal-freeze.md  nodus-library-authoring.md  nodus-mcp-compliance.md  nodus-mcp-oauth.md  nodus-mcp-phase.md  nodus-memory-phase.md  nodus-name-col-consolidation.md  nodus-scheduler-freeze.md  nodus-workflow-freeze.md  release-prep.md
.github/workflows/: ci.yml
demos/: RUNME.md
demos/agent_orchestration/: DESIGN.md
demos/embed_worker/: README.md  worker.py
demos/package_conversion/: README.md  pipeline.nd  sample_input.json  transform.py
docs/: MEMORY.md  README.md  release.md
docs/architecture/: AINDYCLAW_INTEGRATION_PLAN.md  AINDY_INTEGRATION_PLAN.md  INFINITY_PATTERN_MAPPING.md
docs/ecosystem/: NODUS_A2A.md  NODUS_AGENT.md  NODUS_EVENT.md  NODUS_EVENTS.md  NODUS_HTTP.md  NODUS_MEMORY.md  NODUS_RETRY.md  NODUS_STORE_SQL.md  PACKAGE_QUICK_REF.md  README.md  WHY_PYTHON_NOT_NODUS.md
docs/evals/: Installed Nodus Ecosystem Audit.md
docs/governance/: AUDIT_ARCHITECTURE.md  AUDIT_BOUNDARY_INTEGRITY.md  AUDIT_CAPABILITY.md  AUDIT_INDEX.md  AUDIT_INFINITY_RUNTIME.md  AUDIT_LIMITS.md  AUDIT_REAL_WORLD_CAPABILITY.md  AUDIT_RUNTIME_READINESS.md  AUDIT_SECURITY_MODEL.md  AUDIT_USER_REALITY.md  CHANGELOG.md  CHANGE_IMPACT_MATRIX.md  COMPANION_LIBRARY_CONTRACT.md  COMPATIBILITY.md  COMPATIBILITY_MODEL.md  DEPRECATIONS.md  DOCSET_ALIGNMENT_AUDIT.md  DOCSET_CHANGELOG.md  DOCSET_GOVERNANCE.md  DOCSET_INDEX.md  DOCSET_STATUS_AUDIT.md  ECOSYSTEM_90_DAY_CHECKLIST.md  ECOSYSTEM_BOUNDARY.md  ECOSYSTEM_COVERAGE_ANALYSIS.md  ECOSYSTEM_DOCSET_AUDIT.md  ECOSYSTEM_MATURITY_RUBRIC.md  ECOSYSTEM_READINESS_ASSESSMENT.md  EVAL_POSTPUBLISH.md  EVAL_PREPUBLISH.md  EVAL_STAGE4_TEMPLATE.md  EVOLUTION.md  FREEZE_PROPOSAL.md  GENERAL_PURPOSE_TRAJECTORY.md  HIGH_CONFLICT_DOC_RECONCILIATION_PLAN.md  INVARIANT_TEST_MAPPING.md  ISSUE_RESPONSE_POLICY.md  LANGUAGE_STABILITY_INDEX.md  LIBRARY_ECOSYSTEM.md  MATURITY_CHECKLIST.md  NODUS_POSITIONING.md  (+19 more)
docs/guide/: ai-primitives.md  debugging.md  ecosystem.md  embedding-nodus.md  error-handling.md  getting-started.md  library-entry-points.md  modules-and-imports.md  real-world-integration.md  standard-library.md  testing.md  types-and-values.md  workflows-and-tasks.md  working-with-json.md  working-with-maps.md
docs/language/: DESIGN.md  FORMAT.md  LANGUAGE_SPEC.md  LANGUAGE_VISION.md  STYLE_GUIDE.md
docs/migration/: v2-to-v3.md  v3-to-v4.md  v4.0-patch-notes.md
docs/onboarding/: DEVELOPMENT.md  EXAMPLES.md  GETTING_STARTED.md  NODUS.md
docs/policy/: error-surfaces.md
docs/projects/: PROJECTS.md
docs/runtime/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BYTECODE.md  BYTECODE_REFERENCE.md  EMBEDDING.md  EXECUTION_INVARIANTS.md  FAILURE_AND_DEGRADATION_MODEL.md  INSTRUCTION_SEMANTICS.md  OPERATOR_OR_EMBEDDER_RUNBOOK.md  PROFILER.md  RUNTIME.md  RUNTIME_EVENTS.md  SERVER_MODE.md  TASK_GRAPHS.md  WORKFLOWS.md
docs/security/: SECURITY_MATRIX.md
examples/: benchmark.nd  collections_demo.nd  demo.nd  editor_support.nd  error_demo.tl  error_handling.nd  expr_compiler.nd  features_demo.nd  features_demo.tl  fib_list.nd  file_utils_demo.nd  fn_expr_demo.nd  for_and_input.nd  hello.nd  import_demo.nd  import_demo.tl  memory_task.nd  namespace_import_demo.nd  namespace_import_demo.tl  phase2_collections.tl  phase2_for_and_input.nd  phase2_for_and_input.tl  private_access_error.nd  relative_import_demo.nd  std_selective_import_demo.nd  stdlib_demo.nd  stdlib_demo.tl  tiny_vm.nd  workflow_demo.nd
nodus_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plans/: nodus-workflow-framework.md
skills/: nodus.skill  project-AGENTS.md  project-CLAUDE.md
tests/: test_agent_runtime.py  test_annotations.py  test_api_endpoints.py  test_ast_serialization.py  test_async_concurrency_timing.py  test_bare_imports.py  test_batch2b_fixes.py  test_batch2c_fixes.py  test_bom_handling.py  test_break_continue.py  test_bytecode_cache.py  test_bytecode_golden.py  test_bytecode_version.py  test_channels.py  test_checkpoints.py  test_cli_allowed_paths.py  test_cli_compatibility.py  test_cli_help.py  test_closures.py  test_compound_assignment.py  test_coroutines.py  test_crypto.py  test_cyclic_workflow.py  test_cyclic_workflow_err.py  test_dap_server.py  test_debugger.py  test_dependency_resolution.py  test_destructuring.py  test_dis_serialization.py  test_distribution_smoke.py  test_effects.py  test_embedding.py  test_embedding_input.py  test_env.py  test_env_sandbox.py  test_err_location_fields.py  test_exceptions.py  test_finally.py  test_finally_after_catch_return.py  test_formatter_coverage.py  (+95 more)
tmp_demo/: debug_task_graph.py  debug_worker.py  log.txt
tools/: list_fmt_targets.py
(+264 files in other folders)
