[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-lang"
version = "2.0.0"
description = "A stack-VM scripting language and distributed workflow runtime"
authors = [
  { name = "Shawn Knight" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
nodus = "nodus.cli.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.136.0,<1",
  "uvicorn>=0.30.0,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodus = ["stdlib/*.nd", "stdlib/*.tl"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
# Baseline: do not fail the build until annotation coverage improves.
# Run with --no-error-summary until the annotation backlog is addressed.
# See TECH_DEBT.md for per-module error counts.

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]

