[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-lang"
version = "2.1.0"
description = "A stack-VM scripting language and distributed workflow runtime"
authors = [
  { name = "Shawn Knight" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.scripts]
nodus = "nodus.cli.cli:main"

[project.urls]
Homepage = "https://github.com/Masterplanner25/Nodus"
Repository = "https://github.com/Masterplanner25/Nodus"
Changelog = "https://github.com/Masterplanner25/Nodus/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Masterplanner25/Nodus/issues"

[project.optional-dependencies]
server = [
  "fastapi>=0.136.0,<1",
  "uvicorn>=0.30.0,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodus = ["stdlib/*.nd", "stdlib/*.tl"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
# Baseline: do not fail the build until annotation coverage improves.
# Run with --no-error-summary until the annotation backlog is addressed.
# See TECH_DEBT.md for per-module error counts.

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]
