[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-lang"
version = "4.0.5"
description = "An orchestration DSL and embedded runtime for agentic systems"
authors = [
  { name = "Shawn Knight" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "AI agent orchestration",
  "workflow DSL",
  "embedded runtime",
  "agentic systems",
  "MCP",
  "A2A",
  "coroutines",
  "task graph",
  "scripting language",
  "Python embedding",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Compilers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tzdata>=2024.1",
]

[project.scripts]
nodus = "nodus.cli.cli:main"

[project.urls]
Homepage = "https://github.com/Masterplanner25/Nodus"
Repository = "https://github.com/Masterplanner25/Nodus"
Changelog = "https://github.com/Masterplanner25/Nodus/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Masterplanner25/Nodus/issues"

[project.optional-dependencies]
http = [
  "httpx>=0.27,<1",
]
server = [
  "fastapi>=0.136.0,<1",
  "uvicorn>=0.30.0,<1",
  "httpx>=0.27,<1",
]
schema = [
  "pydantic>=2,<3",
]
retry = [
  "nodus-retry>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodus = ["stdlib/*.nd", "stdlib/*.tl"]

[tool.ruff]
exclude = ["Tempnodus-smoke-210"]

[tool.ruff.lint.per-file-ignores]
# _token_parse_regex uses intentional single-line dispatch-table ifs.
"src/nodus/builtins/time_module.py" = ["E701"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
# Baseline: do not fail the build until annotation coverage improves.
# Run with --no-error-summary until the annotation backlog is addressed.
# See TECH_DEBT.md for per-module error counts.

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]
